[package]
name = "iobench"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive", "cargo", "env"] }
jwalk = "0.8.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "fmt",
    "tracing-log",
    "std",
    "local-time",
    "env-filter",
] }
